{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 752,
  "lineage": "cd111cf1-d2d8-0889-7fae-f0709d578c3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "kubernetes_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:244208672477:loadbalancer/kubernetes",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "kubernetes-1272024321.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/healthz",
                "timeout": 15,
                "unhealthy_threshold": 2
              }
            ],
            "id": "kubernetes",
            "idle_timeout": 60,
            "instances": [
              "i-000701bf71b871db7"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "TCP",
                "lb_port": 6443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "kubernetes",
            "security_groups": [
              "sg-047cd7b8753516841"
            ],
            "source_security_group": "244208672477/kubernetes-api",
            "source_security_group_id": "sg-047cd7b8753516841",
            "subnets": [
              "subnet-0daf77a4b1c46e207"
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.kubernetes",
            "aws_iam_role.kubernetes",
            "aws_instance.controller",
            "aws_key_pair.k8contrl_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-000701bf71b871db7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kubernetes",
            "id": "i-000701bf71b871db7",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8contrl_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-029beaf5473a67f06",
            "private_dns": "ip-10-43-0-20.ec2.internal",
            "private_ip": "10.43.0.20",
            "public_dns": "ec2-3-236-194-221.compute-1.amazonaws.com",
            "public_ip": "3.236.194.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cb616199b823e5f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0daf77a4b1c46e207",
            "tags": {
              "Name": "controller-0",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "controller0",
              "ansibleNodeType": "controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ab85236060df8033"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.kubernetes",
            "aws_iam_role.kubernetes",
            "aws_key_pair.k8contrl_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etcd",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-0d3b4ef40ecafec1c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3b4ef40ecafec1c",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "etcd_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094bb682e469d9c29",
            "private_dns": "ip-10-43-0-10.ec2.internal",
            "private_ip": "10.43.0.10",
            "public_dns": "ec2-34-206-71-35.compute-1.amazonaws.com",
            "public_ip": "34.206.71.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08929a0fc4291dac5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0daf77a4b1c46e207",
            "tags": {
              "Name": "etcd-0",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "etcd0",
              "ansibleNodeType": "etcd"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ab85236060df8033"
            ]
          },
          "dependencies": [
            "aws_key_pair.etcd_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-072f4c2015a561e4b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072f4c2015a561e4b",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "k8worker_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058d3797792090e9e",
            "private_dns": "ip-10-43-0-30.ec2.internal",
            "private_ip": "10.43.0.30",
            "public_dns": "ec2-100-27-38-240.compute-1.amazonaws.com",
            "public_ip": "100.27.38.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-037fa3f03808f50dd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0daf77a4b1c46e207",
            "tags": {
              "Name": "worker-0",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker0",
              "ansibleNodeType": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ab85236060df8033"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8worker_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-0407de9a3762e0d06",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0407de9a3762e0d06",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "k8worker_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c344330f1e7a22c5",
            "private_dns": "ip-10-43-0-31.ec2.internal",
            "private_ip": "10.43.0.31",
            "public_dns": "ec2-35-175-122-30.compute-1.amazonaws.com",
            "public_ip": "35.175.122.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0be29e23f534745ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0daf77a4b1c46e207",
            "tags": {
              "Name": "worker-1",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker1",
              "ansibleNodeType": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ab85236060df8033"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8worker_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-40d28157",
            "arn": "arn:aws:ec2:us-east-1:244208672477:instance/i-0a043081b0d06a046",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a043081b0d06a046",
            "instance_state": "running",
            "instance_type": "t2.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "k8worker_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c506e8d3ebf1b2e",
            "private_dns": "ip-10-43-0-32.ec2.internal",
            "private_ip": "10.43.0.32",
            "public_dns": "ec2-34-201-29-205.compute-1.amazonaws.com",
            "public_ip": "34.201.29.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-036e1d506b11c3ad8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0daf77a4b1c46e207",
            "tags": {
              "Name": "worker-2",
              "Owner": "Kubernetes",
              "ansibleFilter": "Kubernetes01",
              "ansibleNodeName": "worker2",
              "ansibleNodeType": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ab85236060df8033"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8worker_keypair",
            "aws_security_group.kubernetes",
            "aws_security_group.kubernetes_api",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:internet-gateway/igw-0a0c414f6c85f8b47",
            "id": "igw-0a0c414f6c85f8b47",
            "owner_id": "244208672477",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-0638f5f391882018b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d1a211197e15c0ba",
            "owner_id": "244208672477",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0c414f6c85f8b47",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-0638f5f391882018b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b97eb09049ae64cb",
            "route_table_id": "rtb-0d1a211197e15c0ba",
            "subnet_id": "subnet-0daf77a4b1c46e207"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.kubernetes",
            "aws_subnet.kubernetes",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:security-group/sg-0ab85236060df8033",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab85236060df8033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.43.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-047cd7b8753516841"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kubernetes",
            "name_prefix": "",
            "owner_id": "244208672477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0638f5f391882018b"
          },
          "dependencies": [
            "aws_security_group.kubernetes_api",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:security-group/sg-047cd7b8753516841",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047cd7b8753516841",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "kubernetes-api",
            "name_prefix": "",
            "owner_id": "244208672477",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-api",
              "Owner": "Kubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0638f5f391882018b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:subnet/subnet-0daf77a4b1c46e207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.43.0.0/16",
            "id": "subnet-0daf77a4b1c46e207",
            "map_public_ip_on_launch": false,
            "owner_id": "244208672477",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            },
            "vpc_id": "vpc-0638f5f391882018b"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:244208672477:vpc/vpc-0638f5f391882018b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.43.0.0/16",
            "default_network_acl_id": "acl-0d88b5812c61a10e2",
            "default_route_table_id": "rtb-0c01711d87e892db7",
            "default_security_group_id": "sg-0b56ebe8cb5d4e999",
            "dhcp_options_id": "dopt-470eef3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0638f5f391882018b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c01711d87e892db7",
            "owner_id": "244208672477",
            "tags": {
              "Name": "kubernetes",
              "Owner": "Kubernetes"
            }
          }
        }
      ]
    }
  ]
}